# TRABAJO-PRACTICO-POO

./: .gitignore  CMakeLists.txt  Mainwindow.cpp  Mainwindow.h  Mainwindow.ui  README.md  Recursos.qrc  integrantes.txt  main.cpp
CasillaUI/: casillaui.cpp  casillaui.h  casillaui.ui
GestorDeGuardado/: GestorDeGuardado.cpp  GestorDeGuardado.h
JugadorUI/: jugadorui.cpp  jugadorui.h  jugadorui.ui
ManejadorDeSonidos/: manejadordesonidos.cpp  manejadordesonidos.h
PantallaAjusteDePartida/: ConfiguracionJuego.h  PantallaAjusteDePartida.cpp  PantallaAjusteDePartida.h  PantallaAjusteDePartida.ui
PantallaFinal/: pantallafinal.cpp  pantallafinal.h  pantallafinal.ui
PantallaMenu/: PantallaMenu.cpp  PantallaMenu.h  PantallaMenu.ui
PantallaPartida/: PantallaPartida.cpp  PantallaPartida.h  PantallaPartida.ui  notificacion.cpp  notificacion.h  notificacion.ui
PantallaPausa/: pantallapausa.cpp  pantallapausa.h  pantallapausa.ui
PantallaTransicion/: pantallatransicion.cpp  pantallatransicion.h  pantallatransicion.ui
TableroUI/: tableroui.cpp  tableroui.h  tableroui.ui
logica/Casillas/: casilla.cpp  casilla.h  casillacalavera.cpp  casillacalavera.h  casillacarcel.cpp  casillacarcel.h  casilladeoca.cpp  casilladeoca.h  casillajardindeoca.cpp  casillajardindeoca.h  casillalaberinto.cpp  casillalaberinto.h  casillanormal.cpp  casillanormal.h  casillaposada.cpp  casillaposada.h  casillapozo.cpp  casillapozo.h  casillapuente.cpp  casillapuente.h
logica/Dado/: dado.cpp  dado.h
logica/JuegoOca/: juegooca.cpp  juegooca.h
logica/Jugador/: jugador.cpp  jugador.h
logica/Tablero/: tablero.cpp  tablero.h
